--- a/pom.xml
+++ b/pom.xml
@@ -13,23 +13,30 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <flink.version>1.0.3</flink.version>
     <beam.version>0.2.0-incubating-SNAPSHOT</beam.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.beam</groupId>
-      <artifactId>beam-runners-flink_2.10</artifactId>
-      <version>${beam.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.beam</groupId>
-      <artifactId>beam-runners-flink_2.10-examples</artifactId>
-      <version>${beam.version}</version>
+      <artifactId>beam-runners-flink-1.15</artifactId>
+      <version>2.40.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.beam</groupId>
       <artifactId>beam-sdks-java-io-kafka</artifactId>
-      <version>${beam.version}</version>
+      <version>2.14.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-runners-reference</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-examples-java</artifactId>
+      <version>2.49.0</version>
     </dependency>
   </dependencies>
 
